--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@types/jest": "^25.2.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
-    "ag-grid-community": "23.x",
-    "ag-grid-react": "^23.0.3",
+    "ag-grid-community": "^23.1.0",
+    "ag-grid-react": "^23.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "^3.5.3",
     "csv-parse": "^4.9.0",
-    "csv-stringify": "^5.4.3",
+    "csv-stringify": "^5.5.0",
     "file-loader": "6.x",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^4.3.0",
@@ -42,7 +42,7 @@
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "3.x",
-    "jest": "^25.5.2",
+    "jest": "^25.5.4",
     "jscpd": "^3.2.1",
     "source-map-loader": "0.2.4",
     "ts-jest": "^25.4.0",
