--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eslint-plugin-jest": "^23.10.0",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "4.x",
-    "jest": "^25.5.4",
+    "jest": "26.x",
     "jscpd": "^3.2.1",
     "source-map-loader": "0.2.4",
     "ts-jest": "^25.5.1",
