--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@typescript-eslint/eslint-plugin": "3.x",
+    "@typescript-eslint/parser": "3.x",
     "eslint": "^7.3.0",
     "eslint-config-google": "0.14.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
