--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "typescript": "^3.9.7",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "4.x"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.7.0",
