--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "^0.88.2",
     "ts-loader": "8.x",
-    "typescript": "^3.9.7",
+    "typescript": "4.x",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "4.x"
