--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eslint": "^7.5.0",
     "eslint-config-google": "0.14.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-jest": "24.x",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^26.1.0",
