--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@types/jest": "^26.0.6",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
-    "ag-grid-community": "^23.2.1",
-    "ag-grid-react": "^23.2.1",
+    "ag-grid-community": "25.x",
+    "ag-grid-react": "25.x",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "^3.6.0",
     "csv-parse": "^4.11.1",
