--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "ag-grid-community": "25.x",
     "ag-grid-react": "25.x",
     "clean-webpack-plugin": "3.0.0",
-    "css-loader": "^3.6.0",
+    "css-loader": "5.x",
     "csv-parse": "^4.11.1",
     "csv-stringify": "^5.5.0",
     "file-loader": "6.x",
