--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@types/jest": "^26.0.6",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "17.x",
+    "@types/react-dom": "17.x",
     "ag-grid-community": "25.x",
     "ag-grid-react": "25.x",
     "clean-webpack-plugin": "3.0.0",
