--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "1.x",
     "pythonic": "2.0.3",
-    "react": "^16.13.1",
+    "react": "17.x",
     "react-ace": "^9.1.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "17.x",
     "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "1.x",
+    "semantic-ui-react": "2.x",
     "ts-loader": "8.x",
     "typescript": "4.x",
     "url-loader": "^4.1.0",
